2006-03-23  Dalibor Topic  <robilad@kaffe.org>

	* README, WHATSNEW: Added information about Blackfin support.

2006-03-23  Kang Shuo  <blackfin.kang@gmail.com>

	* config/Makefile.am,
	config/Makefile.in,
	config/config.alias,
	kaffe/kaffevm/boehm-gc/boehm/config.sub,
	kaffe/kaffevm/boehm-gc/boehm/configure,
	kaffe/kaffevm/boehm-gc/boehm/configure.ac:
	Updated to support blackfin.

	* config/bfin/atomicity.h
	config/bfin/callKaffeException.h
	config/bfin/common.h
	config/bfin/jit-bfin.def
	config/bfin/jit-icode.h
	config/bfin/jit.h
	config/bfin/jit3-bfin.def
	config/bfin/jit3-icode.h
	config/bfin/sysdepCallMethod.h
	config/bfin/threads.h
	config/bfin/trampolines.S
	config/bfin/uclinux/config.frag
	config/bfin/uclinux/jit-md.h
	config/bfin/uclinux/md.c
	config/bfin/uclinux/md.h
	config/bfin/uclinux/sigcontextinfo.h:
	New files.

2006-03-23  Kurt Miller <truk@optonline.net>

	Fixes for OpenBSD stack handling.

	* config/i386/openbsd2/md.c (mdGetStackEnd, mdGetStackSize):
	Added.

	* config/i386/openbsd2/md.h (KAFFEMD_STACK_ERROR, KAFFEMD_STACK_INFINITE,
	KAFFEMD_STACKSIZE, mdSetStackSize, KAFFEMD_STACKEND) Added.
	
2006-03-22  Dalibor Topic  <robilad@kaffe.org>

	Fix for #30.

	* libraries/javalib/Makefile.am.in: (SUBDIRS) Reordered to
	first copy glibj.zip to classpath subdirectory, if necessary,
	before descending into it.

	* libraries/javalib/external/classpath/tools/Makefile.am: Fixed the compiler
	calls to use glibj.zip.

2006-03-22  Dalibor Topic  <robilad@kaffe.org>

	* Resynchronized GNU Classpath.

2006-03-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/ClassLoader.c (java_lang_VMClassLoader_defineClass): 
	Added private variable buf to clarify the code, and fix a compiler warning.

2006-03-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/math/BigInteger.c (Java_java_math_BigInteger_assignString0): 
	Changed type of str to const char * to match its use.

2006-03-21  Dalibor Topic  <robilad@kaffe.org>
